Fix layout issue

--- a/src/app/styles/WrapperContent.module.css
+++ b/src/app/styles/WrapperContent.module.css
@@ -1,15 +1,29 @@
-/* Flexbox container to arrange the divs vertically */
-.wrapperContent {
+.layoutContainer {
   display: flex;
   flex-direction: column;
-  width: 100%;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 0;
+  min-height: 100vh;
+  padding: 2rem;
+  box-sizing: border-box;
+  position: relative;
+  width: 100%;
 }
 
-.actionContent {
-  padding-bottom: 30px;
+.topContent,
+.centerContent,
+.bottomContent {
+  width: 100%;
+  max-width: 450px;
+  text-align: center;
+}
+
+.centerContent {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 0 1rem;
+  text-align: left;
 }
 
 .logo {
